# MAI-NDVW

./: .gitignore  README.md
Documentation/Meeting_Notes/: Notes_Meeting_04_11_2025.md
Documentation/template-final-report NDVW/: elsarticle-template-1-num.aux  elsarticle-template-1-num.tex
Meeting_Notes/: Notes_Meeting_06_10_2025  sprint2_feedback.md
Presentations/: main.tex
Presentations/Sprint 1/: .gitignore  main.tex
Project/: .gitignore  TODO.md
Project/Assets/: ChapterExitPortal.cs  ChapterExitTrigger.cs  DungeonDebugControls.cs  DungeonManager.cs  PortalLifecycleDebugger.cs  TransitionScreenUI.cs
Project/MLAgents/: TODO.md  config.yaml  optimization_log.md
Project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
Project/UserSettings/: EditorUserSettings.asset
Project/gen-ai-server/: .env.example  README.md  config.json  generate.py  main.py  pyproject.toml
Project/gen-ai-server/scripts/: clean.sh
Project/gen-ai-server/src/generators/: dungeon.py  music.py  narrative.py  vision.py  voice.py
Project/gen-ai-server/src/models/: requests.py  responses.py
Project/gen-ai-server/src/utils/: cache.py  config.py  health.py
Project/gen-ai-server/tests/: test_full_pipeline.py  test_music.py  test_narrative.py  test_server.py  test_vision_rooms.py  test_voice.py
Reports/Sprint 1/: .gitignore  main.tex
Reports/Sprint2/: elsarticle-template-1-num.tex  hyperref_config.tex  main.tex  references.bib  sample.bib  slides.tex
Reports/Sprint3/: main.tex  slides.tex  (+1 more)
unity-2d-rpg-combat-course-main/: .gitignore
(+167 files in other folders)
