[project]
name = "gen-ai-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "av<14",
    "diffusers>=0.35.2",
    "einops>=0.8.0",
    "fastapi>=0.121.1",
    "gpustat>=1.1.1",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pillow>=11.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "soundfile>=0.13.1",
    "timm>=1.0.12",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers<4.50",
    "uvicorn>=0.38.0",
]
